fix: interaction info alignment

--- a/client/web/src/app/modules/platform/interaction/interaction-info/interaction-info.component.scss
+++ b/client/web/src/app/modules/platform/interaction/interaction-info/interaction-info.component.scss
@@ -4,10 +4,12 @@
   display: flex;
   flex-direction: column;
 
+  padding: 0px 12px;
+
   .inner-wrapper {
     display: flex;
     flex-direction: column;
-    padding: 12px 8px;
+    padding: 12px 4px;
   }
 
   ion-button {
